--- a/latest.html
+++ b/latest.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div id="navbar">
-        <div id="logo">
-            <img src="https://www.freshmenu.com/images/fm-header-logo.svg" alt="">
+        <!-- <div id="logo">
+            <a href="index.html"><img src="https://www.freshmenu.com/images/fm-header-logo.svg" alt=""></a>
             <lable style="margin-left: 30px;font-size: 18px;color: green;">City :</lable>
             <select name="" id="option">
                 <option value="">Bangaluru</option>
@@ -34,107 +34,19 @@
            <p><a href="latest.html" style="color:#4CAF50; font-weight: bold;">Offers</a></p>
            <button id="profile-btn" onclick="showProfile()"><i style="font-size:24px" class="fa">&#xf2bd;</i></button>
        </div>
-       <div id="showfood"></div>
+       <div id="showfood"></div> -->
     </div>
 
     <div id="latest"></div>
 </body>
 </html>
 
+<script src="index.js" type="module"></script>
 
 <script>
 
 
 
-    let result_div = document.getElementById("showfood")
-   let timerId;
-
- async function ShowsearchResult(query) {
-
-    let res = await fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${query}`)
-    let data = await res.json()
-    return data
- }
-
- function appendfood(food) {
-
-    food.forEach(({strMeal,strMealThumb,strArea,strInstructions, strYoutube}) => {
-
-        let div = document.createElement("div")
-        div.setAttribute("id" , "search_div")
-
-        div.onclick = function() {
-            getdata({strMeal,strMealThumb,strArea,strInstructions, strYoutube})
-        }
-
-        let img = document.createElement("img")
-        img.src = strMealThumb
-
-        let text_div = document.createElement("div")
-        text_div.style.marginLeft = "15px"
-        let foodname = document.createElement("p")
-        foodname.setAttribute("class" , "foodname")
-         foodname.innerText = strMeal
-
-         let foodorigin = document.createElement("p")
-         foodorigin.setAttribute("class", "foodorigin")
-         foodorigin.innerText = strArea
-
-         text_div.append(foodname,foodorigin)
-         div.append(img,text_div)
-
-        result_div.append(div)
-    })
- }
-
- async function main () {
-     let name = document.getElementById("search_input").value
-
-     let res = await ShowsearchResult(name)
-
-     appendfood(res.meals)
-
- }
-
-function debounce(func,delay) {
-    result_div.style.display = "block"
-    if(timerId) {
-        clearTimeout(timerId)
-    }
-
-   timerId =  setTimeout(() => {
-        func()
-    },delay)
-
-}
-
-let flag = true
-
-function Showin() {
-    let search_input = document.getElementById("search_input")
-    if(flag == true) {
-        search_input.style.display = "block"
-        
-        flag = false
-    }else {
-        search_input.style.display = "none"
-        result_div.style.display = "none"
-        flag = true
-    }
-}
-
-if(localStorage.getItem("freshmenu") === null) {
-    localStorage.setItem("freshmenu" , JSON.stringify([]))
-}
-
-function getdata(food) {
-
-    let set = JSON.parse(localStorage.getItem("freshmenu"))
-
-    set.push(food)
-
-    localStorage.setItem("freshmenu" , JSON.stringify(set))
-}
 
 
 async function Showlatest() {
